refactor UpdateUserService.java
Arrays.asList -> List.of 변경
doOnNext 메서드로 사이드 이펙트 처리